--- a/styles/favorites.css
+++ b/styles/favorites.css
@@ -5,6 +5,7 @@
   --background-color: #f5f5f5;
   --text-color: #333333;
   --white: #ffffff;
+  --black: #000000;
   --input-bg: #f8f9fa;
   --input-border: #e1e1e1;
   --success-color: #28a745;
